style.css
.chef-photo {
    height: 400px;
}

.lasagna-photo {
    height: 400px;
}

.lasagna-photo2 {
    height: 400px;
}

.lasagna-photo3 {
    height: 400px;
    margin-top: 20px;
}

.hamburger-photo1 {
    height: 400px;
    width: 400px;
}

.hamburger-photo2 {
    height: 400px;
}

.hamburger-photo3 {
    height: 400px;
}
    

